Add item management features; implement first/last delete and edit functionality

--- a/purple.html
+++ b/purple.html
@@ -11,6 +11,12 @@
     <input type="text" id="product" placeholder="Enter a product">
     <button onclick="itemAdd()">Add Product</button>
     <button onclick="itemDelete()" id="delProduct" style="display: none;">Delete Product</button>
+    <button onclick="itemFirstDelete()" id="delFirstProduct" style="display: none;">Delete First Product</button>
+    <button onclick="itemLastDelete()" id="delLastProduct" style="display: none;">Delete Last Product</button>
+    <button onclick="itemEdit()" id="editProduct" style="display: none;">Edit Product</button>
+
+
+
     <div id="show"></div>
 
     <script src="./purple.js"></script>
